--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "debug": "^4.3.3",
     "dotenv-flow": "^3.2.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "node-fetch": "^3.2.9",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -24,6 +26,7 @@
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.3",
     "@types/node": "^14.18.12 || ^16.11.26",
+    "@types/request": "^2.48.8",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.10.0",
